--- a/app/views/adding-value-2024/current/eligibility/adding-value/storage.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/storage.html
@@ -10,7 +10,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form method="post" action="../funding/cost">
+            <form method="post" action="../funding/solar-pv">
 
                 {{ govukRadios ({
                     idPrefix: 'storage',
