--- a/app/views/adding-value-2024/original/details/applying.html
+++ b/app/views/adding-value-2024/original/details/applying.html
@@ -15,6 +15,7 @@
             {{ govukRadios ({
                 idPrefix: 'applying',
                 name: 'applying',
+                classes: 'govuk-radios--inline',
                 fieldset: {
                     legend: {
                         text: 'Who is applying for this grant?',
