--- a/app/views/adding-value-2024/original/details/business-details.html
+++ b/app/views/adding-value-2024/original/details/business-details.html
@@ -61,7 +61,7 @@
                 value: data['turnover'] if data['turnover'] else '',
                 type: 'number',
                 label: {
-                    text: 'Annual business turnover (£)'
+                    text: 'Business turnover (£)'
                 },
                 prefix: {
                     text: '£'
