--- a/app/views/adding-value-2024/original/scoring/environment.html
+++ b/app/views/adding-value-2024/original/scoring/environment.html
@@ -101,8 +101,14 @@
                 </h2>
                 
                 <p>
-                    RPA wants to fund projects that improve the environment.
+                    RPA wants to fund projects that:
                 </p>
+
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        improve the environment
+                    </li>
+                </ul>
 
             </div>
 
