--- a/app/views/adding-value-2024/original/scoring/impact.html
+++ b/app/views/adding-value-2024/original/scoring/impact.html
@@ -10,11 +10,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            {% if data['from-scoring'] == 'true' %}
-                <form action="results">
-            {% else %}
-                <form method="post" action="manual-labour">
-            {% endif %}
+            <form method="post" action="customers">
 
                 {{ govukCheckboxes ({
                     idPrefix: 'scoring-impact',
