--- a/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir.html
@@ -15,7 +15,7 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        A smaller abattoir is either a:
+                        A smaller abattoir is a:
                     </p>
 
                     <ul class="govuk-list govuk-list--bullet govuk-hint">
