--- a/app/views/adding-value-2024/current/eligibility/funding/solar-pv-cost.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/solar-pv-cost.html
@@ -1,9 +1,17 @@
 {% extends 'adding-value-2024/layout.html' %}
 
-
 {% block pageTitle %}
     What is the estimated cost of buying and installing the solar PV system?
 {% endblock %}
+
+{% set totalCost = data['cost'] | float %}
+
+{% set grantAmount = totalCost | float | percent(50) %}
+{% set solarCap = grantAmount %}
+
+{% if solarCap | float > 100000 %}
+    {% set solarCap = 100000 %}
+{% endif %}
 
 {% block content %}
 
@@ -19,6 +27,20 @@
                 </h1>
 
                 {% set hintHtml %}
+
+                    {% if solarCap == 100000 %}
+
+                        <p class="govuk-hint">
+                            Based on the cost of your items, the maximum grant you can apply for the solar PV system is £100,000 (25% of £400,000).
+                        </p>
+
+                    {% else %}
+
+                        <p class="govuk-hint">
+                            Based on the cost of your items, the maximum grant you can apply for the solar PV system is {{ solarCap | inPounds }} (25% of {{ (solarCap | float * 4) | inPounds }}).
+                        </p>
+
+                    {% endif %}
 
                     <p class="govuk-hint">
                         Enter amount, for example 135,000
