--- a/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
@@ -15,13 +15,21 @@
                  {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You have the option to buy and install a solar PV system with the grant. The solar PV panels must be installed on the building’s roof.
+                        You have the option to buy and install a solar PV system with this grant. The solar PV panels must be installed on the roof of a building related to your project.
                     </p>
 
-                    {{ govukWarningText ({
-                        text: 'You cannot buy a solar PV system with this grant if the roof only faces north or is heavily shaded.',
-                        iconFallbackText: 'Warning'
-                    }) }}
+                    <p class="govuk-hint">
+                        You cannot buy a solar PV system with this grant if:
+                    </p>
+
+                    <ul class="govuk-list govuk-list--bullet govuk-hint">
+                        <li>
+                            the building's roof only faces north or is heavily shaded
+                        </li>
+                        <li>
+                            you are only buying portable items, for example automated vegetable harvesting machines
+                        </li>
+                    </ul>
                     
                 {% endset %}
 
@@ -69,9 +77,6 @@
                 </h2>
                 <p>
                     You do not have to buy and install a solar PV system to be eligible for this grant.
-                </p>
-                <p>
-                    If you choose to buy a solar PV system with this grant it must only be installed on the roof of the building related to your project.
                 </p>
             </div>
         </div>
