updates to content

--- a/app/views/layinghens/current/eligibility/building/items.html
+++ b/app/views/layinghens/current/eligibility/building/items.html
@@ -31,7 +31,7 @@
                             water-tight roof and walls
                         </li>
                         <li>
-                            mesh capping applied to any roof or wall inlets and outlets capped with mesh (using a mesh hole size of 25 millimetres or less)
+                            mesh capping applied to any roof or wall inlets and outlets (using a mesh hole size of 25 millimetres or less)
                         </li>
                         <li>
                             catch trays under any chimneys and roof-mounted vents
