--- a/app/views/layinghens/current/eligibility/building/pullet-requirements.html
+++ b/app/views/layinghens/current/eligibility/building/pullet-requirements.html
@@ -25,7 +25,7 @@
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
-                            a useable area at multiple bird-accessible heights from 10 days of age
+                            a useable area provided at multiple bird-accessible heights from 10 days of age
                         </li>
                         <li>
                             height adjustable perches at equal to or more than 8cm per pullet
