--- a/app/views/layinghens/current/eligibility/ventilation/specifications.html
+++ b/app/views/layinghens/current/eligibility/ventilation/specifications.html
@@ -88,7 +88,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The ventilation system must be able to prevent the heat that the birds generate from increasing the house temperature by more than 3°C above the external ambient temperature.
+                    The ventilation system must be able to stop the house temperature from increasing by more than 3°C above the outdoor temperature.
                 </p>
             </div>
 
