--- a/app/views/layinghens/current/scoring/natural-light.html
+++ b/app/views/layinghens/current/scoring/natural-light.html
@@ -100,7 +100,7 @@
                         promote positive, active behaviour
                     </li>
                     <li>
-                        improved visibility to help reduce collisions between birds 
+                        improve visibility to help reduce collisions between birds
                     </li>
                     <li>
                         increase range use
