--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -457,7 +457,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Collecting and storing poultry management data
+                            Supporting the use of innovative systems
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="data?from-scoring=true">
@@ -477,7 +477,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Collecting and storing additional environmental data
+                            Supporting the use of innovative systems
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="environment-data?from-scoring=true">
