--- a/app/views/layinghens/current/scoring/tiers.html
+++ b/app/views/layinghens/current/scoring/tiers.html
@@ -58,9 +58,9 @@
                             checked: true if data['scoring-tiers'] == '3 tiers or fewer'
                         },
                         {
-                            text: '4 tiers or more',
-                            value: '4 tiers or more',
-                            checked: true if data['scoring-tiers'] == '4 tiers or more'
+                            text: '4 tiers',
+                            value: '4 tiers',
+                            checked: true if data['scoring-tiers'] == '4 tiers'
                         }
                     ]
                 }) }}
