--- a/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
@@ -27,7 +27,7 @@
                             the building's roof only faces north or is heavily shaded
                         </li>
                         <li>
-                            you are only buying portable items, for example automated vegetable harvesting machines
+                            you are only buying portable items
                         </li>
                     </ul>
                     
